fixed card text spacing

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,15 @@ footer {
   margin: 80px;
 }
 
+.card__grid {
+  display: grid;
+  gap: 1.5rem;
+  max-width: 70%;
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .card {
   cursor: pointer;
   position: relative;
@@ -58,14 +67,15 @@ img {
   justify-content: center;
   align-items: center;
   position: absolute;
-  color: aliceblue;
+  color: white;
   width: 100%;
   height: 100%;
 }
 
-.card__grid {
-  margin: 100px
+.card__text {
+  transition: 1s transform ease-in-out;
 }
+
 
 .card__subtitle {
   text-transform: uppercase;
@@ -74,10 +84,11 @@ img {
 .card__description {
   display: flex;
   flex-direction:column;
-  justify-content: space-around;
   align-items: center;
-  width: 50%;
-  height: 50%;
+}
+
+.card__description p {
+  padding: 50px;
 }
 
 button {
@@ -91,12 +102,7 @@ button {
 
 @media (min-width: 1024px) {
   .card__grid {
-    display: grid;
-    gap: 1.5rem;
-    grid-template-columns: repeat(4, 1fr);
-    max-width: 70%;
-    margin-left: auto;
-    margin-right: auto;
+    grid-template-columns: repeat(4, 1fr)
   }
 
   .card:first-child {
@@ -110,18 +116,9 @@ button {
   .card:last-child {
     grid-column: span 2;
   }
-
-  .card__container {
-    width: 100%;
-    height: 100%;
-    
-  }
-
   .card__description {
     width: 100%;
   }
-
-
 }
 
 
